--- a/portfolio/src/components/About/About.css
+++ b/portfolio/src/components/About/About.css
@@ -3,9 +3,9 @@
     border-radius: 20px;
     width: 250px;
     margin-top: 50px;
-    border-color: brown;
-    border-width: 5px;
-    border-style: solid;
+    box-shadow: 2px 2px 1px 2px rgba(228, 224, 224, 0.2);  
+    
+  
    
 }
 
