--- a/portfolio/src/components/Menu/Menu.css
+++ b/portfolio/src/components/Menu/Menu.css
@@ -7,6 +7,10 @@
    
     
 }
+.menu__icon{
+
+    display: none;
+}
 
 .menu ul{
 
@@ -25,7 +29,7 @@
     text-decoration: none;
     margin-bottom: 20px;
     padding: 10px 0;  
-    width: 100%;    
+    width: 100%;
     /*background-image: linear-gradient(to top right, #67626b 50%, #282c34 90%); */
     box-shadow: 2px 10px 20px 2px rgba(228, 224, 224, 0.2);
    
@@ -35,4 +39,41 @@
     box-shadow: 2px 5px 10px 5px rgba(228, 224, 224, 0.2);
 
     
+}
+
+@media(max-width: 480px){
+
+    .menu ul{
+
+        flex-direction: row;
+        justify-content: space-around;
+        
+
+    }
+
+    
+    .menu__item {
+
+       border-radius: 50%;
+       padding: 20px;
+       width: auto;  
+       box-shadow: 2px 2px 1px 2px rgba(228, 224, 224, 0.2);   
+       
+    }
+    .menu__item:hover{
+
+        color: #F64C72;
+        box-shadow: 2px 2px 1px 2px rgba(228, 224, 224, 0.2);   
+
+    }
+
+    .menu__text{
+        display: none;
+    }
+    .menu__icon{
+        display: inline;
+    }
+
+    
+
 }
