ajusta section e aside para responsividade

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,14 +2,11 @@
 
   text-align: center;
   background-color: #282c34;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column; 
   color: white;
   margin: 0;
-  
-
-
 }
 
 
