--- a/portfolio/src/components/Aside/Aside.css
+++ b/portfolio/src/components/Aside/Aside.css
@@ -1,9 +1,10 @@
 .aside{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100%;
     background-image: linear-gradient(to top right, #b48ed1 5%, #282c34 50%);  
-    width: 300px;
+    min-width: 300px;
+    
    
     margin-left: 0;
     justify-content: flex-end;
@@ -13,8 +14,8 @@
 
     .aside{
         
-        width: 100%;
-        height: 100px;
+        width: 100%;        
+        max-height: 100px;
         background-image: none;
         
     }
@@ -22,14 +23,6 @@
 
 }
 
-@media(max-width: 768px){
-
-    .aside{
-        width: 100%;
-    }
-    
-
-}
 
 
 
