--- a/portfolio/src/components/Aside/Aside.css
+++ b/portfolio/src/components/Aside/Aside.css
@@ -1,13 +1,15 @@
 .aside{
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    height: 100%;
     background-image: linear-gradient(to top right, #b48ed1 5%, #282c34 50%);  
-    min-width: 300px;
-    
-   
+    min-width: var(--aside-width);
+    position: fixed;
+    z-index: 1;
+    overflow-x: hidden;
     margin-left: 0;
     justify-content: flex-end;
+    bottom: var(--footer-height);
 }
 
 @media(max-width: 834px){
@@ -17,6 +19,7 @@
         width: 100%;        
         max-height: 100px;
         background-image: none;
+        
         
     }
     
