--- a/portfolio/src/components/Cards/Card.css
+++ b/portfolio/src/components/Cards/Card.css
@@ -3,11 +3,12 @@
     display: flex;
     flex-direction: column;   
     background-color: rgb(136, 128, 128);
-    margin: 100px;
+    margin-bottom: 100px;
     height: auto;
     border-radius: 10px;
     box-shadow: 10px 10px 1px -1px rgba(228, 224, 224, 0.2);
     padding: 20px;
+    width: 500px;
 
 
 }
@@ -66,6 +67,7 @@
     .card{
 
         margin: 40px 20px;
+        
     }
 
 }
