--- a/portfolio/src/components/Container/Container.css
+++ b/portfolio/src/components/Container/Container.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    min-height: 100%;
+    margin-bottom: var(--footer-height);
   
 
 }
