--- a/portfolio/src/components/Menu/Menu.css
+++ b/portfolio/src/components/Menu/Menu.css
@@ -1,10 +1,7 @@
 .menu{
     display: flex;
     flex-direction: column;   
-    width: 100%; 
-   
-   
-   
+    width: 100%;
     
 }
 .menu__icon{
@@ -36,7 +33,7 @@
 }
 
 .menu__item:hover{
-    box-shadow: 2px 5px 10px 5px rgba(228, 224, 224, 0.2);
+    box-shadow: 2px 5px 10px 5px rgba(133, 130, 130, 0.2);
 
     
 }
@@ -47,6 +44,14 @@
 }
 
 @media(max-width: 834px){
+
+    .menu{
+        position:fixed;
+        top: 0;
+        background-color: var(--blue-dark);
+        box-shadow: 1px 1px 5px 1px rgba(228, 224, 224, 0.2);
+        
+    }
 
     .menu ul{
 
