--- a/portfolio/src/components/Section/Section.css
+++ b/portfolio/src/components/Section/Section.css
@@ -3,5 +3,18 @@
     display: flex;
     flex-direction: column;
     width: 100%;    
-    min-height: 100vh;
+    min-height: 100%;
+    position: relative;
+    margin-left: var(--aside-width);
+    
+}
+
+
+@media(max-width: 834px){
+
+    .section{
+        margin-left: 0; 
+    }
+    
+
 }
