--- a/portfolio/src/components/About/About.css
+++ b/portfolio/src/components/About/About.css
@@ -1,7 +1,7 @@
 .about{
     display: flex;
-    flex-direction: column;
-   
+    flex-direction: column;   
+    align-items: center;   
    
 }
 
@@ -10,8 +10,7 @@
     border-radius: 20px;
     width: 250px;
     margin-top: 50px;
-    box-shadow: 2px 2px 1px 2px rgba(228, 224, 224, 0.2);  
-    
+    box-shadow: 2px 2px 1px 2px rgba(228, 224, 224, 0.2);     
   
    
 }
@@ -39,4 +38,18 @@
 .info_perfil a:visited, a:link, a:active{
 
     color: #F64C72;;
+}
+
+
+@media(max-width: 834px){
+
+    .perfil{
+        width: 150px;
+    }
+    .info_perfil{
+
+        margin: 20px;
+    }
+    
+
 }
