--- a/portfolio/src/components/Aside/Aside.css
+++ b/portfolio/src/components/Aside/Aside.css
@@ -6,7 +6,7 @@
     min-width: var(--aside-width);
     position: fixed;
     z-index: 1;
-    overflow-x: hidden;
+    
     margin-left: 0;
     justify-content: flex-end;
     bottom: var(--footer-height);
@@ -17,7 +17,7 @@
     .aside{
         
         width: 100%;        
-        max-height: 100px;
+        max-height: var(--menu-responsive-heigth);
         background-image: none;
         
         
