--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -14,6 +14,7 @@ footer{
 @media(max-width: 834px){
 
     footer{
+        justify-content: center;
         background-image: none;
         background-color: #b48ed1;
     }
