--- a/portfolio/src/components/Projects/Projects.css
+++ b/portfolio/src/components/Projects/Projects.css
@@ -1,9 +1,9 @@
 .project{
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 0;
-    margin: 0;
-    
+    margin: 0;    
     width: 100%;
     height: 100%;
   
